// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="Menu_Standard_Card"
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <h4
          className="Typography__TitleText-sc-19auepv-2 czurBm"
          fontSize="1.25em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Malibu, CA
        </h4>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Menu__MenuBG-sc-17iwn6x-4 hjUiBO"
          onClick={[Function]}
        />
        <a
          className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
          id="Menu_Standard"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="ellipsis-v"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 128 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="Menu__MenuPopper-sc-17iwn6x-3 hMueFt"
            id="menupopper-Menu_Standard"
            onClick={null}
            onMouseLeave={[Function]}
            transform="translate(-100%, -5%)"
          >
            <div
              className="Card__CardWrapper-sc-1g3s676-3 eKxcvy"
              href={null}
              id="storyshots_91"
              media={null}
              onClick={null}
            >
              <ul
                className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
                id="listwrapper-Menu_Standard"
              >
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-undefined"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Save
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-undefined"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Filter
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-undefined"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Share
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-undefined"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Delete
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
              </ul>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          Live the California dream at this modern paradise right on the beach in Malibu. Whether it's your escape from the city or new full time residence; nothing beats waking up to the sound of waves and having coffee on the sun drenched deck with dolphins swimming by in the morning. Located just minutes away from Santa Monica and walking distance to Malibu's hottest restaurant Moonshadows. It's time to buy that stand up paddleboard, get back in tune with nature and start living your Malibu dream now. This is the best deal under $4 million on the beach.
        </p>
      </div>
    </div>
  </div>
  <div />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 iIHtoG"
  id={null}
  rows={null}
>
  <div />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="Menu_Icon_Card"
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <h4
          className="Typography__TitleText-sc-19auepv-2 czurBm"
          fontSize="1.25em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Malibu, CA
        </h4>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Menu__MenuBG-sc-17iwn6x-4 hjUiBO"
          onClick={[Function]}
        />
        <a
          className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
          id="Menu_Icon"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="ellipsis-v"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 128 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="Menu__MenuPopper-sc-17iwn6x-3 hMueFt"
            id="menupopper-Menu_Icon"
            onClick={null}
            onMouseLeave={[Function]}
            transform="translate(-100%, -5%)"
          >
            <div
              className="Card__CardWrapper-sc-1g3s676-3 eKxcvy"
              href={null}
              id="storyshots_92"
              media={null}
              onClick={null}
            >
              <ul
                className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
                id="listwrapper-Menu_Icon"
              >
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-save"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 boCGaE"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg-inline--fa fa-save fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                          color={null}
                          data-icon="save"
                          data-prefix="far"
                          focusable="false"
                          fontSize="inherit"
                          id={null}
                          role="img"
                          style={Object {}}
                          viewBox="0 0 448 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM272 80v80H144V80h128zm122 352H54a6 6 0 0 1-6-6V86a6 6 0 0 1 6-6h42v104c0 13.255 10.745 24 24 24h176c13.255 0 24-10.745 24-24V83.882l78.243 78.243a6 6 0 0 1 1.757 4.243V426a6 6 0 0 1-6 6zM224 232c-48.523 0-88 39.477-88 88s39.477 88 88 88 88-39.477 88-88-39.477-88-88-88zm0 128c-22.056 0-40-17.944-40-40s17.944-40 40-40 40 17.944 40 40-17.944 40-40 40z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                      <div
                        className="Bar__Slot-icfo76-1 yvaBx"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Save
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-filter"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 boCGaE"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg-inline--fa fa-filter fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                          color={null}
                          data-icon="filter"
                          data-prefix="far"
                          focusable="false"
                          fontSize="inherit"
                          id={null}
                          role="img"
                          style={Object {}}
                          viewBox="0 0 512 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M463.952 0H48.057C5.419 0-16.094 51.731 14.116 81.941L176 243.882V416c0 15.108 7.113 29.335 19.2 40l64 47.066c31.273 21.855 76.8 1.538 76.8-38.4V243.882L497.893 81.941C528.042 51.792 506.675 0 463.952 0zM288 224v240l-64-48V224L48 48h416L288 224z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                      <div
                        className="Bar__Slot-icfo76-1 yvaBx"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Filter
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-share"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 boCGaE"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg-inline--fa fa-share fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                          color={null}
                          data-icon="share"
                          data-prefix="far"
                          focusable="false"
                          fontSize="inherit"
                          id={null}
                          role="img"
                          style={Object {}}
                          viewBox="0 0 576 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M561.938 190.06L385.94 14.107C355.79-16.043 304 5.327 304 48.047v80.703C166.04 132.9 0 159.68 0 330.05c0 73.75 38.02 134.719 97.63 173.949 37.12 24.43 85.84-10.9 72.19-54.46C145.47 371.859 157.41 330.2 304 321.66v78.28c0 42.64 51.73 64.15 81.94 33.94l175.997-175.94c18.751-18.74 18.751-49.14.001-67.88zM352 400V272.09c-164.521 1.79-277.44 33.821-227.98 191.61C88 440 48 397.01 48 330.05c0-142.242 160.819-153.39 304-154.02V48l176 176-176 176z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                      <div
                        className="Bar__Slot-icfo76-1 yvaBx"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Share
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-delete"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 boCGaE"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg-inline--fa fa-trash-alt fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                          color={null}
                          data-icon="trash-alt"
                          data-prefix="far"
                          focusable="false"
                          fontSize="inherit"
                          id={null}
                          role="img"
                          style={Object {}}
                          viewBox="0 0 448 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                      <div
                        className="Bar__Slot-icfo76-1 yvaBx"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Delete
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
              </ul>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          Live the California dream at this modern paradise right on the beach in Malibu. Whether it's your escape from the city or new full time residence; nothing beats waking up to the sound of waves and having coffee on the sun drenched deck with dolphins swimming by in the morning. Located just minutes away from Santa Monica and walking distance to Malibu's hottest restaurant Moonshadows. It's time to buy that stand up paddleboard, get back in tune with nature and start living your Malibu dream now. This is the best deal under $4 million on the beach.
        </p>
      </div>
    </div>
  </div>
  <div />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 iIHtoG"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="Menu_Position_BottomLeft_Card"
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <h4
          className="Typography__TitleText-sc-19auepv-2 czurBm"
          fontSize="1.25em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Malibu, CA
        </h4>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Menu__MenuBG-sc-17iwn6x-4 hjUiBO"
          onClick={[Function]}
        />
        <a
          className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
          id="Menu_Position_BottomLeft"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="ellipsis-v"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 128 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="Menu__MenuPopper-sc-17iwn6x-3 hMueFt"
            id="menupopper-Menu_Position_BottomLeft"
            onClick={null}
            onMouseLeave={[Function]}
            transform="translate(-100%, -5%)"
          >
            <div
              className="Card__CardWrapper-sc-1g3s676-3 eKxcvy"
              href={null}
              id="storyshots_93"
              media={null}
              onClick={null}
            >
              <ul
                className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
                id="listwrapper-Menu_Position_BottomLeft"
              >
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-save"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Save
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-filter"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Filter
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-share"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Share
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-delete"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Delete
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
              </ul>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          Live the California dream at this modern paradise right on the beach in Malibu. Whether it's your escape from the city or new full time residence; nothing beats waking up to the sound of waves and having coffee on the sun drenched deck with dolphins swimming by in the morning. Located just minutes away from Santa Monica and walking distance to Malibu's hottest restaurant Moonshadows. It's time to buy that stand up paddleboard, get back in tune with nature and start living your Malibu dream now. This is the best deal under $4 million on the beach.
        </p>
      </div>
    </div>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="Menu_Position_BottomRight_Card"
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <div
          className="Menu__MenuBG-sc-17iwn6x-4 hjUiBO"
          onClick={[Function]}
        />
        <a
          className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
          id="Menu_Position_BottomRight"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="ellipsis-v"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 128 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="Menu__MenuPopper-sc-17iwn6x-3 jKxsWq"
            id="menupopper-Menu_Position_BottomRight"
            onClick={null}
            onMouseLeave={[Function]}
            transform=""
          >
            <div
              className="Card__CardWrapper-sc-1g3s676-3 eKxcvy"
              href={null}
              id="storyshots_94"
              media={null}
              onClick={null}
            >
              <ul
                className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
                id="listwrapper-Menu_Position_BottomRight"
              >
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-save"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Save
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-filter"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Filter
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-share"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Share
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-delete"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Delete
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
              </ul>
            </div>
          </div>
        </a>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <h4
          className="Typography__TitleText-sc-19auepv-2 czurBm"
          fontSize="1.25em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Malibu, CA
        </h4>
      </div>
    </div>
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          Live the California dream at this modern paradise right on the beach in Malibu. Whether it's your escape from the city or new full time residence; nothing beats waking up to the sound of waves and having coffee on the sun drenched deck with dolphins swimming by in the morning. Located just minutes away from Santa Monica and walking distance to Malibu's hottest restaurant Moonshadows. It's time to buy that stand up paddleboard, get back in tune with nature and start living your Malibu dream now. This is the best deal under $4 million on the beach.
        </p>
      </div>
    </div>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="Menu_Position_TopLeft_Card"
    media={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
          fontSize="1em"
          fontWeight={400}
          id={null}
          letterSpacing="0px"
        >
          Live the California dream at this modern paradise right on the beach in Malibu. Whether it's your escape from the city or new full time residence; nothing beats waking up to the sound of waves and having coffee on the sun drenched deck with dolphins swimming by in the morning. Located just minutes away from Santa Monica and walking distance to Malibu's hottest restaurant Moonshadows. It's time to buy that stand up paddleboard, get back in tune with nature and start living your Malibu dream now. This is the best deal under $4 million on the beach.
        </p>
      </div>
    </div>
    <div
      className="Bar__BarLayout-icfo76-2 jEWtiX"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <h4
          className="Typography__TitleText-sc-19auepv-2 czurBm"
          fontSize="1.25em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Malibu, CA
        </h4>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div
          className="Menu__MenuBG-sc-17iwn6x-4 hjUiBO"
          onClick={[Function]}
        />
        <a
          className="Menu__MenuContainer-sc-17iwn6x-0 hmdtNM"
          id="Menu_Position_TopLeft"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-ellipsis-v fa-w-4 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="ellipsis-v"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 128 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="Menu__MenuPopper-sc-17iwn6x-3 bQmxWk"
            id="menupopper-Menu_Position_TopLeft"
            onClick={null}
            onMouseLeave={[Function]}
            transform="translate(-100%, -110%)"
          >
            <div
              className="Card__CardWrapper-sc-1g3s676-3 eKxcvy"
              href={null}
              id="storyshots_95"
              media={null}
              onClick={null}
            >
              <ul
                className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
                id="listwrapper-Menu_Position_TopLeft"
              >
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-save"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Save
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-filter"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Filter
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-share"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Share
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
                <li
                  className="Menu__ItemWrapper-sc-17iwn6x-2 bRKcyV"
                  id="item-delete"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                >
                  <section
                    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
                    disabled={false}
                    href={null}
                    id={null}
                    tabIndex="0"
                  >
                    <div
                      className="Bar__BarLayout-icfo76-2 eUVQsH"
                      id={null}
                      onClick={null}
                    >
                      <div
                        className="Bar__Slot-icfo76-1 RjiBe"
                      >
                        <a
                          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
                          onClick={[Function]}
                        >
                          <p
                            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
                            fontSize="1em"
                            fontWeight={600}
                            id={null}
                            letterSpacing="0px"
                          >
                            Delete
                          </p>
                        </a>
                      </div>
                    </div>
                  </section>
                </li>
              </ul>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</section>
`;
